--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "reactemoji",
   "version": "1.0.0",
   "description": "An Emoji component for React applications",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "repository": "https://github.com/seanmcp/reactemoji",
   "author": "Sean McPherson",
   "license": "MIT",
-  "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0"
+  "devDependencies": {
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
