--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "author": "Sean McPherson",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^23.3.11",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "jest": "^23.6.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.2.2"
   },
   "scripts": {
-    "build": "rm -rf ./lib && mkdir ./lib && tsc"
+    "build": "rm -rf ./lib && mkdir ./lib && tsc",
+    "test": "jest"
   },
   "files": [
     "lib",
