Default export Emoji

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a11y-react-emoji",
-  "version": "0.0.1--prerelease",
+  "version": "0.0.1--prerelease.0",
   "description": "An accessible Emoji component for React applications",
   "main": "main.js",
   "unpkg": "main.js",
