Use index.js as entry point

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "a11y-react-emoji",
-  "version": "0.0.1--prerelease.1",
+  "version": "0.0.1--prerelease.2",
   "description": "An accessible Emoji component for React applications",
-  "main": "lib/Emoji.js",
-  "unpkg": "lib/Emoji.js",
+  "main": "index.js",
+  "unpkg": "index.js",
   "repository": "https://github.com/seanmcp/a11y-react-emoji",
   "homepage": "https://github.com/seanmcp/a11y-react-emoji#readme",
   "bugs": "https://github.com/seanmcp/a11y-react-emoji/issues",
