--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a11y-react-emoji",
-  "version": "0.0.1--prerelease.5",
+  "version": "0.0.1--prerelease.6",
   "description": "An accessible Emoji component for React applications",
   "main": "index.js",
   "unpkg": "index.js",
@@ -24,6 +24,7 @@
     "test": "jest"
   },
   "files": [
+    "index.js",
     "lib",
     "LICENSE"
   ]
