Remove aria-hidden when label is provided
The previous behavior was to set the attribute to false, but that
resulted in unnecessary code; elements are not hidden by default.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "./src/**/*.ts"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "./src/**/*.test.ts"
     ]
 }
