--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,9 @@ jobs:
       - store_artifacts:
           path: coverage
           prefix: coverage
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - test
+      - build
