--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "typescript": "^3.2.2"
     },
     "peerDependencies": {
-        "react": "16.x",
-        "react-dom": "16.x"
+        "react": ">=16",
+        "react-dom": ">=16"
     },
     "scripts": {
         "build": "tsc",
