--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "removeComments": true,
         "declaration": true,
         "sourceMap": true,
-        "jsx": "react"
+        "jsx": "react",
+        "inlineSources": true
     },
     "include": [
         "./src/**/*.tsx",
